Fix link overflowing T&C page

--- a/css/style.css
+++ b/css/style.css
@@ -2750,6 +2750,18 @@ section#tyc p {
   line-height: 1.6em;
   font-style: italic;
 }
+section#tyc a {
+  white-space: pre-wrap;
+  /* CSS3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
+}
 
 #buy-coins .page-title {
   color: #fff200;
