--- a/scss/_page-tyc.scss
+++ b/scss/_page-tyc.scss
@@ -13,4 +13,11 @@ section#tyc{
     line-height: 1.6em;
     font-style: italic;
   }
+  a{
+    white-space: pre-wrap; /* CSS3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+  }
 }
